# arbitrage

./: CMakeLists.txt  README.md  api.cpp  api.h  binance.cpp  binance.h  kucoin.cpp  kucoin.h  main.cpp
lib/cpprestsdk/: cpprestsdk-targets.cmake
src/: api.cpp  api.h  binance.cpp  binance.h  exchanges.cpp  exchanges.h  kucoin.cpp  kucoin.h  main.cpp
